--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ body {
     margin: 20px;
     background-color: #1e1e1e; /* Dark background color */
     color: #fff; /* Light text color */
+	max-width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 table {
